Fix for wrapping the list of offices in the footer.  On IE, OSI's office listings would bleed into the help links.
I have no idea why this was in there originally.  The manual setting
of nowrap predates KARL3.

--- a/karl/views/static/themedstyles.css
+++ b/karl/views/static/themedstyles.css
@@ -1115,7 +1115,7 @@ ul#offices-listing li {
   list-style:none;
   text-transform: uppercase;
   display: inline;
-  white-space:nowrap;
+  white-space: normal;
 }
 span.officeslistSeparator {
   padding: 0 0.2em 0 0.2em;
